--- a/Exercice_3/index.html
+++ b/Exercice_3/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html ng-app>
-  <head>
-    <meta charset="utf-8">
-    <title>Exercice 3</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
-  </head>
-  <body>
-    <div>
-    </div>
-  </body>
+<html ng-app="myApp">
+<head>
+<html lang="fr" dir="ltr">
+<meta charset="utf-8 "/>
+<title>Exercice 3</title>
+</head>
+<body>
+<div ng-controller="dateCtrl">
+
+  {{ today | date : "dd/MM/yyyy" }}
+
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
+<script>
+var app = angular.module('myApp', []);
+app.controller('dateCtrl', function($scope) {
+  $scope.today = new Date("2017-01-23");
+});
+</script>
+
+</body>
 </html>
