--- a/Exercice_5/index.html
+++ b/Exercice_5/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html ng-app="app" ng-controller="testCtrl">
-  <head>
-    <meta charset="utf-8">
-    <title>Exercice 5</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
-    <script src="script.js"></script>
-  </head>
-  <body>
-    <div>
-    </div>
-  </body>
+<html lang="fr" ng-app="app" ng-controller="testCtrl">
+<head>
+  <meta charset="utf-8" />
+  <title>Exercice 5</title>
+</head>
+<body ng-app="testCtrl">
+  <div>
+    {{ article | limitTo:letterLimit }}
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
+  <script src="script.js"></script>
+</body>
 </html>
